Fix colour value for readability in VS Code

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -4,7 +4,7 @@ body {
 
 .para,
 .small-para {
-  color: hsl(0, 0%, 0%);
+  color: rgb(0, 0, 0);
   font-weight: 800;
 }
 
